--- a/templates/cmsdistinguish/cmsdistinguish.html
+++ b/templates/cmsdistinguish/cmsdistinguish.html
@@ -27,6 +27,13 @@
                 <input type="button" class="btn btn-default" id="btn" v-on:click="cms_getlist" value="识别一下" />
               </span>
             </div>
+              {% verbatim %}
+              <div id="cmsresult">
+                <table>
+                    <tr v-></tr>
+                </table>
+              </div>
+              {% endverbatim %}
             <!--   -->
             <!-- <div class="btn-group form-group">
               <button class="btn btn-default">扫描类型</button> <button data-toggle="dropdown" class="btn btn-default dropdown-toggle"><span class="caret"></span></button>
