--- a/templates/collectApp/base.html
+++ b/templates/collectApp/base.html
@@ -42,7 +42,7 @@
               <li class="dropdown-header">工具</li>
               <li><a href="{% url 'dirscan:dirscanView' %}">目录扫描</a></li>
               <li><a href="{% url 'cmsdistinguish:cmsdistinguishview' %}">网站类型检测</a></li>
-              <li><a href="#">端口扫描</a></li>
+              <li><a href="{% url 'portscan:portscanView' %}">端口扫描</a></li>
               <li><a href="#">子域名查询</a></li>
               <!-- <li role="separator" class="divider"></li>
                   <li class="dropdown-header">Nav header</li>
