--- a/templates/portscan/portscan.html
+++ b/templates/portscan/portscan.html
@@ -10,7 +10,7 @@
 		<div class="col-md-12 column">
 			<div class="page-header">
 				<h1>
-					目录扫描
+					端口扫描
 				</h1>
 			</div>
 			<div class="row clearfix">
@@ -109,5 +109,5 @@
 	{{message}}
 	{% endverbatim %}
 </div> -->
-<script src="{% static 'dirscan/js/dirscans.js' %}"></script>
+<script src="{% static 'portscan/js/portscans.js' %}"></script>
 {% endblock %}
