--- a/templates/dirscan/dirscan.html
+++ b/templates/dirscan/dirscan.html
@@ -2,112 +2,126 @@
 {% load static from staticfiles %}
 
 {% block main %}
-<script src="https://cdn.staticfile.org/vue/2.2.2/vue.min.js"></script>
-<script src="https://cdn.staticfile.org/vue-resource/1.5.1/vue-resource.min.js"></script>
+    <script src="https://cdn.staticfile.org/vue/2.2.2/vue.min.js"></script>
+    <script src="https://cdn.staticfile.org/vue-resource/1.5.1/vue-resource.min.js"></script>
 
-<div class="container">
-	<div class="row clearfix">
-		<div class="col-md-12 column">
-			<div class="page-header">
-				<h1>
-					目录扫描
-				</h1>
-			</div>
-			<div class="row clearfix">
-				<div class="col-md-3 column">
-				</div>
-				<div class="col-md-6 column">
-					<form role="form" action="" id="form">
-						<div class="form-group">
-							<label for="domainName">域名</label><input placeholder="请输入网址比如:http://www.dedecms.com/" type="text" class="form-control" id="domainName" v-model="domainName" />
-						</div>
-						<!--   -->
-						<div class="form-group">
-							{% verbatim %}
-							<label for="file_ext">扫描类型</label><select id='file_ext' class="form-control" name="file_ext" v-model="file_ext">
-								<option value="">请选择一种类型</option>
-								<option v-for="item in items" :value="item">{{item}}</option>
-								{% endverbatim %}
-								<!-- <option value="asp">asp</option>
+    <div class="container">
+        <div class="row clearfix">
+            <div class="col-md-12 column">
+                <div class="page-header">
+                    <h1>
+                        目录扫描
+                    </h1>
+                </div>
+                <div class="row clearfix">
+                    <div class="col-md-3 column">
+                    </div>
+                    <div class="col-md-6 column">
+                        <form role="form" action="" id="form">
+                            <div class="form-group">
+                                <label for="domainName">域名</label><input placeholder="请输入网址比如:http://www.dedecms.com/"
+                                                                         type="text" class="form-control"
+                                                                         id="domainName" v-model="domainName"/>
+                            </div>
+                            <!--   -->
+                            <div class="form-group">
+                                {% verbatim %}
+                                <label for="file_ext">扫描类型</label><select id='file_ext' class="form-control"
+                                                                          name="file_ext" v-model="file_ext">
+                                <option value="">请选择一种类型</option>
+                                <option v-for="item in items" :value="item">{{item}}</option>
+                                <!-- <option value="asp">asp</option>
                 <option value="aspx">aspx</option>
                 <option value="jsp">jsp</option>
                 <option value="jspx">jspx</option> -->
-							</select>
-						</div>
-						<!-- <div class="btn-group form-group">
-              <button class="btn btn-default">扫描类型</button> <button data-toggle="dropdown" class="btn btn-default dropdown-toggle"><span class="caret"></span></button>
-					  	<ul class="dropdown-menu">
-						  	<li>
-							  	 <a href="#">操作</a>
-							  </li>
-						  	<li class="disabled">
-							  	 <a href="#">另一操作</a>
-							  </li>
-							  <li class="divider">
-							  </	li>
-							  <li>
-								   <a href="#">其它</a>
-							  </li>
-						  </ul>
-					  </div> -->
-						<input type="button" class="btn btn-default" id="btn" v-on:click="getlist" value="开始扫描" />
+                            </select>
+                                <div style="color: red;">
+                                    <p v-model="file_ext_flag">{{ file_ext_flag }}</p>
+                                </div>
+                                {% endverbatim %}
 
-					</form>
-				</div>
-				<div class="col-md-3 column">
-				</div>
-			</div>
-			<table class="table table-condensed" id="table">
-				<thead>
-					<tr>
-						<th>
-							编号
-						</th>
-						<th>
-							目录
-						</th>
-						<th>
-							状态码
-						</th>
-					</tr>
-				</thead>
-				<tbody>
-					<!--
-					 v-if="item.status === '200'"
-						这里的v-if还要再改，能够实现根据当前item.status的值来绑定class属性success、error、warning、info
-				 -->
-					{% verbatim %}
-                    <tr v-if="list.length == 0">
-                        <td colspan="3">当前列表无数据</td>
+                            </div>
+                            <!-- <div class="btn-group form-group">
+                  <button class="btn btn-default">扫描类型</button> <button data-toggle="dropdown" class="btn btn-default dropdown-toggle"><span class="caret"></span></button>
+                              <ul class="dropdown-menu">
+                                  <li>
+                                       <a href="#">操作</a>
+                                  </li>
+                                  <li class="disabled">
+                                       <a href="#">另一操作</a>
+                                  </li>
+                                  <li class="divider">
+                                  </	li>
+                                  <li>
+                                       <a href="#">其它</a>
+                                  </li>
+                              </ul>
+                          </div> -->
+                            <input type="button" class="btn btn-default" id="btn" v-on:click="getlist" value="开始扫描"/>
+
+                        </form>
+                    </div>
+                    <div class="col-md-3 column">
+                    </div>
+                </div>
+                <table class="table table-condensed" id="table">
+                    <thead>
+                    <tr v-if="list.length != 0">
+                        <th>
+                            编号
+                        </th>
+                        <th>
+                            目录
+                        </th>
+                        <th>
+                            状态码
+                        </th>
                     </tr>
-					<tr v-for="(item, index) in list" v-bind:class="{success: item.status == 200, error: item.status == 404}">
-						<td>{{index}}</td>
-						<td>{{item.url}}</td>
-						<td>{{item.status}}</td>
-					</tr>
-					{% endverbatim %}
-					<tr class="success">
+                    </thead>
+                    <tbody>
+                    <!--
+                     v-if="item.status === '200'"
+                        这里的v-if还要再改，能够实现根据当前item.status的值来绑定class属性success、error、warning、info
+                 -->
+                    {% verbatim %}
+                    <!--<tr v-if="list.length == 0">
+                        <td colspan="3">当前列表无数据</td>
+                    </tr>-->
+                    <tr v-for="(item, index) in list"
+                        v-bind:class="{success: item.status == 200, error: item.status == 404}">
+                        <td>{{index}}</td>
+                        <td>{{item.url}}</td>
+                        <td>{{item.status}}</td>
+                    </tr>
+                    {% endverbatim %}
+                    <tr class="success">
 
-					</tr>
-					<tr class="error">
+                    </tr>
+                    <tr class="error">
 
-					</tr>
-					<tr class="warning">
+                    </tr>
+                    <tr class="warning">
 
-					</tr>
-					<tr class="info">
+                    </tr>
+                    <tr class="info">
 
-					</tr>
-				</tbody>
-			</table>
-		</div>
-	</div>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
 
-</div>
-<!-- <div id="test">
-	{% verbatim %}
-	{{message}}
-	{% endverbatim %}
-</div> -->
-<script src="{% static 'dirscan/js/dirscans.js' %}"></script>
+    </div>
+    <!-- <div id="test">
+        {% verbatim %}
+        {{message}}
+        {% endverbatim %}
+    </div> -->
+    <script src="{% static 'dirscan/js/dirscans.js' %}"></script>
 {% endblock %}
+
+
+
+
+<a id="modal-838795" href="#myModal" role="button" class="btn" data-toggle="modal">触发遮罩窗体</a>
+
