--- a/templates/collectApp/base.html
+++ b/templates/collectApp/base.html
@@ -3,69 +3,126 @@
 <html lang="zh-CN">
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-  <title>信息收集系统</title>
-  <link rel="icon" href="{% static 'collectApp/other/favicon/favicon.ico' %}">
-  <!-- Bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="{% static 'collectApp/css/start-template.css' %}" rel="stylesheet">
-  <link rel="stylesheet" href="{% static 'collectApp/other/font-awesome/css/font-awesome.min.css' %}">
-  <!-- HTML5 shim 和 Respond.js 是为了让 IE8 支持 HTML5 元素和媒体查询（media queries）功能 -->
-  <!-- 警告：通过 file:// 协议（就是直接将 html 页面拖拽到浏览器中）访问页面时 Respond.js 不起作用 -->
-  <!--[if lt IE 9]>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
+    <title>信息收集系统</title>
+    <link rel="icon" href="{% static 'collectApp/other/favicon/favicon.ico' %}">
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{% static 'collectApp/css/start-template.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'collectApp/other/font-awesome/css/font-awesome.min.css' %}">
+    <!-- HTML5 shim 和 Respond.js 是为了让 IE8 支持 HTML5 元素和媒体查询（media queries）功能 -->
+    <!-- 警告：通过 file:// 协议（就是直接将 html 页面拖拽到浏览器中）访问页面时 Respond.js 不起作用 -->
+    <!--[if lt IE 9]>
       <script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/respond.js@1.4.2/dest/respond.min.js"></script>
     <![endif]-->
+    <style type="text/css">
+        {#html{#}
+        {#    position: relative;#}
+        {#    min-height: 100%;#}
+        {
+        #}#}
+        {##}
+        {#body{#}
+        {#    margin-bottom: 60px;#}
+        {
+        #}#}
+        .footer {
+            bottom: 0;
+            width: 100%;
+            height: 50px;
+            background-color: #f5f5f5;
+        }
+    </style>
 </head>
 
 <body>
-  <nav class="navbar navbar-inverse navbar-fixed-top">
+<nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="{% url 'collectApp:index' %}">信息收集系统</a>
-      </div>
-      <div id="navbar" class="collapse navbar-collapse">
-        <ul class="nav navbar-nav">
-          <li><a href="{% url 'collectApp:home' %}">首页</a></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">功能 <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li class="dropdown-header">工具</li>
-              <li><a href="{% url 'dirscan:dirscanView' %}">目录扫描</a></li>
-              <li><a href="{% url 'cmsdistinguish:cmsdistinguishview' %}">网站类型检测</a></li>
-              <li><a href="{% url 'portscan:portscanView' %}">端口扫描</a></li>
-              <li><a href="#">子域名查询</a></li>
-              <!-- <li role="separator" class="divider"></li>
-                  <li class="dropdown-header">Nav header</li>
-                  <li><a href="#">Separated link</a></li>
-                  <li><a href="#">One more separated link</a></li> -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                    aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="{% url 'collectApp:index' %}">信息收集系统</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li><a href="{% url 'collectApp:home' %}">首页</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                       aria-expanded="false">功能 <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li class="dropdown-header">工具</li>
+                        <li><a href="{% url 'dirscan:dirscanView' %}">目录扫描</a></li>
+                        <li><a href="{% url 'cmsdistinguish:cmsdistinguishview' %}">网站类型检测</a></li>
+                        <li><a href="{% url 'portscan:portscanView' %}">端口扫描</a></li>
+                        <li><a href="{% url 'subdomainscan:subdomainscanView' %}">子域名查询</a></li>
+                        <!-- <li role="separator" class="divider"></li>
+                            <li class="dropdown-header">Nav header</li>
+                            <li><a href="#">Separated link</a></li>
+                            <li><a href="#">One more separated link</a></li> -->
+                    </ul>
+                </li>
+                <li><a href="{% url 'collectApp:about' %}">关于</a></li>
             </ul>
-          </li>
-          <li><a href="{% url 'collectApp:about' %}">关于</a></li>
-        </ul>
-      </div>
-      <!--/.nav-collapse -->
+        </div>
+        <!--/.nav-collapse -->
     </div>
-  </nav>
+</nav>
 
-  <div id="main">
+<div class="modal fade bs-example-modal-sm" id="myModal" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-body" style="text-align: center;">
+                <img src="{% static 'img/loading.gif' %}">
+                <p>正在加载。。。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div id="main">
     {% block main %}
     {% endblock %}
-  </div>
+</div>
+<div>
+    <br>
+    <br>
+    <br>
+</div>
+<nav class="navbar-fixed-bottom footer">
+    <div class="container">
+        <div class="row clearfix">
+            <div class="col-md-3 column"></div>
+            <div class="col-md-6 column">
+                <div class="mastfoot">
+                    <div class="inner">
 
-  <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
-  <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
-  <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
+                        <p style="margin-top: 3px;text-align: center;">版权所有 @2019， 信息收集系统</p>
+                        <p style="margin-bottom: 3px;text-align: center;">Cover template for <a
+                                href="http://getbootstrap.com/">Bootstrap</a>, by <a
+                                href="https://overoptimus.github.io">overoptimus</a>.</p>
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 column"></div>
+        </div>
+    </div>
+
+</nav>
+
+
+<!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
+<script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
+<!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
