--- a/templates/portscan/portscan.html
+++ b/templates/portscan/portscan.html
@@ -2,7 +2,7 @@
 {% load static from staticfiles %}
 
 {% block main %}
-<script src="https://cdn.staticfile.org/vue/2.2.2/vue.min.js"></script>
+<script src="https://cdn.staticfile.org/vue/2.2.2/vue.min.js" xmlns:v-on="http://www.w3.org/1999/xhtml"></script>
 <script src="https://cdn.staticfile.org/vue-resource/1.5.1/vue-resource.min.js"></script>
 
 <div class="container">
@@ -23,34 +23,12 @@
 						</div>
 						<!--   -->
 						<div class="form-group">
-							{% verbatim %}
-							<label for="file_ext">扫描类型</label><select id='file_ext' class="form-control" name="file_ext" v-model="file_ext">
-								<option value="">请选择一种类型</option>
-								<option v-for="item in items" :value="item">{{item}}</option>
-								{% endverbatim %}
-								<!-- <option value="asp">asp</option>
-                <option value="aspx">aspx</option>
-                <option value="jsp">jsp</option>
-                <option value="jspx">jspx</option> -->
-							</select>
+							<label for="file_ext">扫描端口范围</label><input placeholder="请输入：1-1024,3600,8080（默认为（1-1024））" type="text" class="form-control" id="port_Range" v-model="port_Range" />
+                            {% verbatim %}
+                            <p>{{ message }}</p>
+                            {% endverbatim %}
 						</div>
-						<!-- <div class="btn-group form-group">
-              <button class="btn btn-default">扫描类型</button> <button data-toggle="dropdown" class="btn btn-default dropdown-toggle"><span class="caret"></span></button>
-					  	<ul class="dropdown-menu">
-						  	<li>
-							  	 <a href="#">操作</a>
-							  </li>
-						  	<li class="disabled">
-							  	 <a href="#">另一操作</a>
-							  </li>
-							  <li class="divider">
-							  </	li>
-							  <li>
-								   <a href="#">其它</a>
-							  </li>
-						  </ul>
-					  </div> -->
-						<input type="button" class="btn btn-default" id="btn" v-on:click="getlist" value="开始扫描" />
+						<input type="button" class="btn btn-default" id="btn" v-on:click="get_result" value="开始扫描" />
 
 					</form>
 				</div>
@@ -64,11 +42,23 @@
 							编号
 						</th>
 						<th>
-							目录
+							端口
 						</th>
 						<th>
-							状态码
+							状态
 						</th>
+                        <th>
+							判断原因
+						</th>
+                        <th>
+							猜测服务
+						</th>
+                        <th>
+                            产品
+                        </th>
+                        <th>
+                            版本
+                        </th>
 					</tr>
 				</thead>
 				<tbody>
@@ -77,13 +67,17 @@
 						这里的v-if还要再改，能够实现根据当前item.status的值来绑定class属性success、error、warning、info
 				 -->
 					{% verbatim %}
-                    <tr v-if="list.length == 0">
-                        <td colspan="3">当前列表无数据</td>
+                    <tr v-if="result.length == 0">
+                        <td colspan="7">当前列表无数据</td>
                     </tr>
-					<tr v-for="(item, index) in list" v-bind:class="{success: item.status == 200, error: item.status == 404}">
+					<tr v-for="(item, index) in result" v-bind:class="{success: item.status == 200, error: item.status == 404}">
 						<td>{{index}}</td>
-						<td>{{item.url}}</td>
+						<td>{{item.port}}</td>
 						<td>{{item.status}}</td>
+						<td>{{item.reason}}</td>
+						<td>{{item.name}}</td>
+						<td>{{item.product}}</td>
+						<td>{{item.version}}</td>
 					</tr>
 					{% endverbatim %}
 					<tr class="success">
@@ -109,5 +103,5 @@
 	{{message}}
 	{% endverbatim %}
 </div> -->
-<script src="{% static 'portscan/js/portscans.js' %}"></script>
+<script src="{% static 'portscan/js/portscan.js' %}"></script>
 {% endblock %}
